# hs-bindings-sipc

./: Makefile  README.markdown  bindings-sipc.cabal
src/Bindings/SELinux/: SIPC.chs
src/Examples/: MQCreator.hs  MQDestroyer.hs  MQReader.hs  MQSender.hs
