Name:                bindings-sipc 
Version:             1.0 
Synopsis:            Low level bindings to SIPC. 
Description:         Low level bindings to the Secure Inter-Process Communications (SIPC)
                     library for SELinux.
License:             LGPL
License-file:        LICENSE
Author:              Justin Ethier
Maintainer:          Justin Ethier <github.com/justinethier>
Homepage:            http://justinethier.github.com/hs-bindings-sipc
Cabal-Version:       >= 1.8
Build-Tools:         c2hs
Build-Type:          Simple
Category:            FFI 
Tested-with:         GHC == 6.10.3

Extra-Source-Files:  README.markdown
                     LICENSE
Source-Repository head
     Type:            git
     Location:        git://github.com/justinethier/hs-bindings-sipc.git

-- 
-- Data-Files:          stdlib.scm
-- 

Library
  Build-Depends:   base >= 2.0 && < 5
--, c2hs
  Hs-Source-Dirs:  src
  Exposed-Modules: Bindings.SELinux.SIPC 
  Extra-Libraries: sipc

Executable         MQReader
  Build-Depends:   bindings-sipc, base >= 2.0 && < 5, mtl
  Main-is:         MQReader.hs
  Hs-Source-Dirs:  src/Examples
 
Executable         MQCreator
  Build-Depends:   bindings-sipc, base >= 2.0 && < 5
--  , array, containers, haskeline, transformers, mtl, parsec, directory, ghc, ghc-paths
  Main-is:         MQCreator.hs
  Hs-Source-Dirs:  src/Examples

Executable         MQDestroyer
  Build-Depends:   bindings-sipc, base >= 2.0 && < 5
  Main-is:         MQDestroyer.hs
  Hs-Source-Dirs:  src/Examples

Executable         MQSender
  Build-Depends:   bindings-sipc, base >= 2.0 && < 5
  Main-is:         MQSender.hs
  Hs-Source-Dirs:  src/Examples
